# Agentic-Blog-Generator

./: Output.md  README.md  app.py  dockerfile  pyproject.toml  requirements.txt
src/ai_blog/: crew.py  main.py
src/ai_blog/config/: agents.yaml  tasks.yaml
templates/: index.html
