[project]
name = "ai_blog"
version = "0.1.0"
description = "AI_Blog using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
ai_blog = "ai_blog.main:run"
run_crew = "ai_blog.main:run"
train = "ai_blog.main:train"
replay = "ai_blog.main:replay"
test = "ai_blog.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
